--- a/index.html
+++ b/index.html
@@ -3,40 +3,37 @@
   <head>
     <meta charset="utf-8" />
     <title>devCodeCamp &middot; Most Wanted</title>
-    <style>
-      .container {
-        display: grid;
-      }
-    </style>
+   <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
     <div class="container">
-      <header>
-        <h1>WELCOME TO MOST WANTED</h1>
-        <button id="search">SEARCH</button>
-      </header>
-      <br />
-      <button onclick="displayTableResults(data)">Display People</button>
-      <button>Reset Data</button>
-      <button>Display Gallery</button>
-      <br />
-      <br />
-      <hr />
-      <br />
-      <table id="myTable">
-        <thead>
-          <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Gender</th>
-            <th>Height</th>
-            <th>Weight</th>
-            <th>Eye Color</th>
-            <th>Occupation</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+      <div class="box1">
+        <header>
+          <h1>WELCOME TO MOST WANTED</h1>
+          <button id="search">SEARCH</button>
+        </header>
+      </div>
+      <div class="box2">
+        <button onclick="displayTableResults(data)">Display People</button>
+        <button>Reset Data</button>
+        <button>Display Gallery</button>
+      </div>
+      <div class="box3">
+        <table id="myTable">
+          <thead>
+            <tr>
+              <th>First Name</th>
+              <th>Last Name</th>
+              <th>Gender</th>
+              <th>Height</th>
+              <th>Weight</th>
+              <th>Eye Color</th>
+              <th>Occupation</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
     </div>
     <script src="data.js"></script>
     <script src="app.js"></script>
