Finished CSS Grid layout, specifiying content alignment for each track

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <title>devCodeCamp &middot; Most Wanted</title>
-   <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <div class="container">
       <div class="box1">
         <header>
           <h1>WELCOME TO MOST WANTED</h1>
-          <button id="search">SEARCH</button>
         </header>
+      </div>
+      <div class="box1_5">
+        <button id="search">SEARCH</button>
       </div>
       <div class="box2">
         <button onclick="displayTableResults(data)">Display People</button>
