--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
+// MAIN LAYOUT OF APP
     <div class="container">
       <div class="box1">
         <header>
@@ -13,7 +14,7 @@
         </header>
       </div>
       <div class="box1_5">
-        <button id="search">SEARCH</button>
+        <button id="modal-btn">SEARCH</button>
       </div>
       <div class="box2">
         <button onclick="displayTableResults(data)">Display People</button>
@@ -35,6 +36,14 @@
           </thead>
           <tbody></tbody>
         </table>
+      </div>
+    </div>
+
+// MODAL 
+    <div class="modal">
+      <div class="modal-content">
+        <span class="close-btn">&times;</span>
+        <p>Here is some text inside the modal</p>
       </div>
     </div>
     <script src="data.js"></script>
