Reset function and button complete

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="box2">
         <button onclick="displayTableResults(data)">Display People</button>
-        <button>Reset Data</button>
+        <button onclick="clearTableResults()">Reset Data</button>
         <button>Display Gallery</button>
       </div>
       <div class="box3">
@@ -33,7 +33,7 @@
               <th>Occupation</th>
             </tr>
           </thead>
-          <tbody></tbody>
+          <tbody id="tableBody"></tbody>
         </table>
       </div>
     </div>
@@ -42,9 +42,17 @@
       <div class="modal-content">
         <span class="close-btn">&times;</span>
         <p>Here is some text inside the modal</p>
+        <form>
+          <label for="fname">Enter First Name</label>
+          <input type="text" id="fname" name="fname"><br>
+          <label for="lname">Enter Last Name</label>
+          <input type="text" id="lname" name="lname"><br>
+          <br>
+          <input type="submit" value="Submit" onclick="searchByName(data)">
+        </form>
       </div>
     </div>
-    
+
     <script src="data.js"></script>
     <script src="app.js"></script>
   </body>
