--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
       <div class="modal-content">
         <span class="close-btn">&times;</span>
         <p>Here is some text inside the modal</p>
-        <form>
+        <form onsubmit="return false">
           <label for="fname">Enter First Name</label>
           <input type="text" id="fname" name="fname"><br>
           <label for="lname">Enter Last Name</label>
           <input type="text" id="lname" name="lname"><br>
           <br>
-          <input type="submit" value="Submit" onclick="searchByName(data)">
+          <input type="submit" id="onSubmit" value="Submit" onclick="searchByName(data)">
         </form>
       </div>
     </div>
