--- a/index.html
+++ b/index.html
@@ -41,7 +41,17 @@
     <div class="modal">
       <div class="modal-content">
         <span class="close-btn">&times;</span>
-        <p>Here is some text inside the modal</p>
+        <p>Search by First and Last Name</p>
+        <form onsubmit="return false">
+          <label for="fname">Enter First Name</label>
+          <input type="text" id="fname" name="fname"><br>
+          <label for="lname">Enter Last Name</label>
+          <input type="text" id="lname" name="lname"><br>
+          <br>
+          <input type="submit" id="onSubmit" value="Submit" onclick="searchByName(data)">
+        </form>
+        <br>
+        <p>Search by Trait</p>
         <form onsubmit="return false">
           <label for="fname">Enter First Name</label>
           <input type="text" id="fname" name="fname"><br>
