--- a/index.html
+++ b/index.html
@@ -40,26 +40,47 @@
 
     <div class="modal">
       <div class="modal-content">
-        <span class="close-btn">&times;</span>
-        <p>Search by First and Last Name</p>
-        <form onsubmit="return false">
-          <label for="fname">Enter First Name</label>
-          <input type="text" id="fname" name="fname"><br>
-          <label for="lname">Enter Last Name</label>
-          <input type="text" id="lname" name="lname"><br>
-          <br>
-          <input type="submit" id="onSubmit" value="Submit" onclick="searchByName(data)">
-        </form>
-        <br>
-        <p>Search by Trait</p>
-        <form onsubmit="return false">
-          <label for="fname">Enter First Name</label>
-          <input type="text" id="fname" name="fname"><br>
-          <label for="lname">Enter Last Name</label>
-          <input type="text" id="lname" name="lname"><br>
-          <br>
-          <input type="submit" id="onSubmit" value="Submit" onclick="searchByName(data)">
-        </form>
+        <div class="modal-column1">
+          <p>Search by First and Last Name</p>
+          <form onsubmit="return false">
+            <label for="fname">Enter First Name</label>
+            <input type="text" id="fname" name="fname" /><br />
+            <label for="lname">Enter Last Name</label>
+            <input type="text" id="lname" name="lname" /><br />
+            <br />
+            <input
+              type="submit"
+              id="onSubmit"
+              value="Submit"
+              onclick="searchByName(data)"
+            />
+          </form>
+        </div>
+        <div class="modal-column2">
+          <p>Search by Trait</p>
+          <form onsubmit="return false">
+            <label for="gender">Gender</label>
+            <input type="text" id="gender" name="gender" /><br />
+            <label for="eyecolor">Eye Color</label>
+            <input type="text" id="eyecolor" name="eyecolor" /><br />
+            <label for="height">Height</label>
+            <input type="text" id="height" name="height" /><br />
+            <label for="weight">Weight</label>
+            <input type="text" id="weight" name="weight" /><br />
+            <label for="occupation">Occupation</label>
+            <input type="text" id="occupation" name="occupation" /><br />
+            <br />
+            <input
+              type="submit"
+              id="onSubmit"
+              value="Submit"
+              onclick="searchByTrait(data)"
+            />
+          </form>
+        </div>
+        <div class="modal-column3">
+          <span class="close-btn">&times;</span>
+        </div>
       </div>
     </div>
 
